--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "lesson_13-frontend",
+  "name": "frontend",
   "version": "0.1.0",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@fvilers/disable-react-devtools": "^1.3.0",
     "@reduxjs/toolkit": "^1.8.4",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-react": "^1.0.6",
+    "axios": "^1.2.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.13.4"
+    "react-spinners": "^0.13.4",
+    "xml-formatter": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
